# django-kickstartx

./: CHANGELOG.md  README.md  pyproject.toml  release.py
django_kickstart/: __init__.py  cli.py  generator.py  venv_utils.py
django_kickstart/templates/: .dockerignore.j2  .env.example.j2  .gitignore.j2  Dockerfile.j2  docker-compose.yml.j2  entrypoint.sh.j2  manage.py.j2  requirements.txt.j2
django_kickstart/templates/app/: admin.py.j2  apps.py.j2  forms.py.j2  models.py.j2  serializers.py.j2  tests.py.j2  urls_api.py.j2  urls_mvp.py.j2  views_api_cbv.py.j2  views_api_fbv.py.j2  views_cbv.py.j2  views_fbv.py.j2
django_kickstart/templates/html/: about.html.j2  base.html.j2  home.html.j2
django_kickstart/templates/project/: asgi.py.j2  settings.py.j2  urls.py.j2  wsgi.py.j2
django_kickstart/templates/static/: style.css.j2
django_kickstartx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
